# hw5

./: CMakeLists.txt  main.c
Data/: a1.txt  a2.txt  a3.txt  alphabet.txt  lotto.txt
Feature/: p_01.c  p_02.c  p_03.c  p_04.c  p_05.c  p_06.c  p_07.c  p_08.c  p_09.c  p_10.c  p_11.c  p_12.c  p_13.c  p_14.c  p_15.c  p_16.c
